# FastAPIWeb

./: alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_20_1855-2627301e5bfe_create_products_table.py  2025_01_20_1918-dbd1e7990744_create_users_table.py  2025_01_20_1954-d9dd7992b848_create_posts_table.py  2025_01_23_2112-a3ee2105596b_create_profile_table.py  2025_01_24_1543-451098e9d717_create_order_product_association_table.py  2025_01_24_1912-62aa774beebc_add_count_column_to_order_product_.py  2025_01_24_2040-4069859f8529_add_column_unit_price_for_order_product_.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: views.py
