[tool.poetry]
name = "fastapiweb"
version = "0.1.0"
description = ""
authors = ["SB <sergbasov.com@gmail.com>"]

#readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.0.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
aiosqlite = "^0.19.0"
pydantic-settings = "<3.0.0"
alembic = "<2.0.0"
#dependencies = [
#    "fastapi (>=0.115.6,<0.116.0)",
#    "uvicorn[standard] (>=0.34.0,<0.35.0)",
#    "black (>=24.10.0,<25.0.0)",
#    "pydantic[email] (>=2.10.5,<3.0.0)",
#    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
#    "aiosqlite (>=0.20.0,<0.21.0)",
#    "pydantic-settings (>=2.7.1,<3.0.0)",
#    "alembic (>=1.14.1,<2.0.0)"
#
#]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 60


